res/examples/invalid/const_decl_in_grouping_parans.eg
(const a = 123;);

// out: SyntaxError: unexpected "const"; expected: ["\"{\"", "\"[\"", "\"(\"", "\")\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "identifier", "string", "number"]
// out: SyntaxError: unexpected ")"; expected: ["\"{\"", "\"[\"", "\"(\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "\"fn\"", "\"let\"", "\"const\"", "\"type\"", "\"assert_type\"", "\"return\"", "identifier", "string", "number"]